--- a/src/dislife-main-medicine.html
+++ b/src/dislife-main-medicine.html
@@ -7,7 +7,7 @@
 <body>
 <!-- BEGIN  out-->
 <div class="out">
-	//=include partials/header.html
+	//=include partials/header-main.html
 	<div class="container main-head">
 		<div class="main-head__info">
 			<div class="main-head__title">Здоровье</div>
@@ -51,7 +51,7 @@
 			</div>
 			<div class="col-xs">
 				<div class="social">
-					<div class="social__title">Кто мы такие?</div>
+					<div class="social__title"><a href="#">Кто мы такие?</a></div>
 					<ul class="social__list">
 						<li><a href="https://www.facebook.com/disliferu/" class="is-fb"><i class="fa fa-facebook"></i></a></li>
 						<li><a href="https://vk.com/dislife_ru" class="is-tw"><i class="fa fa-twitter"></i></a></li>
