--- a/src/dislife-instruction-simple.html
+++ b/src/dislife-instruction-simple.html
@@ -16,7 +16,8 @@
 					<!-- BEGIN news-line  -->
 					<div class="news-line">
 						<a href="#" class="btn btn_violet btn_bd">Образование</a>
-						<div class="news-line__info">29 ОКТЯБРЯ, 20:27 <span>Диана Ивановна</span></div>
+						<time class="news-line__time">29 ОКТЯБРЯ, 20:27</time>
+						<span>Диана Ивановна</span>
 					</div>
 					<!-- END news-line -->
 					<!-- BEGIN news-header  -->
@@ -25,6 +26,12 @@
 						<h1 class="h1">Что делать, когда получил повестку?</h1>
 					</div>
 					<!-- END news-header -->
+					<ul class="soc-v">
+						<li><a href="#" class="fa fa-facebook"></a></li>
+						<li><a href="#" class="fa fa-twitter"></a></li>
+						<li><a href="#" class="icon-vk"></a></li>
+						<li><a href="#" class="fa fa-envelope"></a></li>
+					</ul>
 					<div class="divider"></div>
 					<!-- BEGIN article  -->
 					<article class="article">
@@ -108,12 +115,6 @@
 				<!-- END news-sm -->
 			</div>
 			<!-- BEGIN l-col2  -->
-			<ul class="soc-v">
-				<li><a href="#" class="fa fa-facebook"></a></li>
-				<li><a href="#" class="fa fa-twitter"></a></li>
-				<li><a href="#" class="icon-vk"></a></li>
-				<li><a href="#" class="fa fa-envelope"></a></li>
-			</ul>
 		</div>
 		<div class="l-news l-news_border">
 			<div class="l-col1">
