--- a/src/dislife-instruction.html
+++ b/src/dislife-instruction.html
@@ -16,7 +16,8 @@
 					<!-- BEGIN news-line  -->
 					<div class="news-line">
 						<a href="#" class="btn btn_violet btn_bd">Образование</a>
-						<div class="news-line__info">29 ОКТЯБРЯ, 20:27 <span>Диана Ивановна</span></div>
+						<time class="news-line__time">29 ОКТЯБРЯ, 20:27</time>
+						<span>Диана Ивановна</span>
 					</div>
 					<!-- END news-line -->
 					<!-- BEGIN news-header  -->
@@ -25,6 +26,12 @@
 						<h1 class="h1">Как выбрать школу для своего ребенка?</h1>
 					</div>
 					<!-- END news-header -->
+					<ul class="soc-v">
+						<li><a href="#" class="fa fa-facebook"></a></li>
+						<li><a href="#" class="fa fa-twitter"></a></li>
+						<li><a href="#" class="icon-vk"></a></li>
+						<li><a href="#" class="fa fa-envelope"></a></li>
+					</ul>
 					<div class="divider"></div>
 					<!-- BEGIN article  -->
 					<article class="article">
@@ -33,28 +40,32 @@
 								<span class="article__list-num">1</span>
 								<div class="article__option">
 									<h3 class="h3">Ориентируйтесь на правильные рейтинги</h3>
-									<div class="man man_big-img">
-										<div class="man__img">
-											<img src="img/man.png" alt="">
+									<div class="article__el">
+										<div class="man man_big-img">
+											<div class="man__img">
+												<img src="img/man.png" alt="">
+											</div>
+											<div class="man__text">Объясняет заслуженный учитель России, автор учебников по литературе Татьяна Иванцова</div>
 										</div>
-										<div class="man__text">Объясняет заслуженный учитель России, автор учебников по литературе Татьяна Иванцова</div>
+										<p>«Есть две причины не ориентироваться на ЕГЭ. Во-первых, это позволяет оценивать школы не только через призму подготовки к вузу; во-вторых, к ЕГЭ большинство школьников сейчас готовятся не в учреждении, а с репетиторами и на курсах. Важный критерий для рейтингов — результаты учащихся на Всероссийских олимпиадах школьников. Там не покупаются места и результаты. Также важный критерий — наличие дополнительных образовательных опций и системный обзор по их качеству. Это кружки, мероприятия, и все то, что делает школу моделью мира, а не местом дрессировки. Я могу порекомендовать последний рейтинг Московского центра непрерывного математического образования при поддержке Минобрнауки РФ. Он именно такой, как нужно»</p>
 									</div>
-									<p>«Есть две причины не ориентироваться на ЕГЭ. Во-первых, это позволяет оценивать школы не только через призму подготовки к вузу; во-вторых, к ЕГЭ большинство школьников сейчас готовятся не в учреждении, а с репетиторами и на курсах. Важный критерий для рейтингов — результаты учащихся на Всероссийских олимпиадах школьников. Там не покупаются места и результаты. Также важный критерий — наличие дополнительных образовательных опций и системный обзор по их качеству. Это кружки, мероприятия, и все то, что делает школу моделью мира, а не местом дрессировки. Я могу порекомендовать последний рейтинг Московского центра непрерывного математического образования при поддержке Минобрнауки РФ. Он именно такой, как нужно»</p>
 								</div>
 							</li>
 							<li>
 								<span class="article__list-num">2</span>
 								<div class="article__option">
 									<h3 class="h3">Учитывайте способности ребенка</h3>
-									<div class="man man_big-img">
-										<div class="man__img">
-											<img src="img/man.png" alt="">
+									<div class="article__el">
+										<div class="man man_big-img">
+											<div class="man__img">
+												<img src="img/man.png" alt="">
+											</div>
+											<div class="man__text">Объясняет детский психолог с двадцатилетним стажем работы Наталья Семенова</div>
 										</div>
-										<div class="man__text">Объясняет детский психолог с двадцатилетним стажем работы Наталья Семенова</div>
-									</div>
-									<p>«Странно, что всегда приходится рассказывать банальности. Даже если у вас вся семья — талантливые математики, а у ребенка-первоклассника не складывается с цифрами и плохо с логикой, то это повод для выбора простой программы и не повод по факту рождения записывать своих детей в математический лицей. Если у родителей есть трудности с оценкой способностей чада, а еще хуже — ребенок не любит заниматься и не хочет идти в школу, то это также повод обратить внимание! Получить хотя бы одну консультацию детского психолога. Школа должна начинаться с удовольствия и желания идти в нее каждое утро». </p>
-									<div class="note">
-										<p>Психологический центр <span>на Волхонке</span> оказывает бесплатные консультации родиелям «сложных» первоклассников. </p>
+										<p>«Странно, что всегда приходится рассказывать банальности. Даже если у вас вся семья — талантливые математики, а у ребенка-первоклассника не складывается с цифрами и плохо с логикой, то это повод для выбора простой программы и не повод по факту рождения записывать своих детей в математический лицей. Если у родителей есть трудности с оценкой способностей чада, а еще хуже — ребенок не любит заниматься и не хочет идти в школу, то это также повод обратить внимание! Получить хотя бы одну консультацию детского психолога. Школа должна начинаться с удовольствия и желания идти в нее каждое утро». </p>
+										<div class="note">
+											<p>Психологический центр <span>на Волхонке</span> оказывает бесплатные консультации родиелям «сложных» первоклассников. </p>
+										</div>
 									</div>
 								</div>
 							</li>
@@ -62,13 +73,15 @@
 								<span class="article__list-num">3</span>
 								<div class="article__option">
 									<h3 class="h3">Проверьте, имеет ли выбранная вами частная школа государственную аккредитацию</h3>
-									<div class="man man_big-img">
-										<div class="man__img">
-											<img src="img/man.png" alt="">
+									<div class="article__el">
+										<div class="man man_big-img">
+											<div class="man__img">
+												<img src="img/man.png" alt="">
+											</div>
+											<div class="man__text">Объясняет детский психолог с двадцатилетним стажем работы Наталья Семенова</div>
 										</div>
-										<div class="man__text">Объясняет детский психолог с двадцатилетним стажем работы Наталья Семенова</div>
+										<p>«Платные частные школы могут позволить себе далеко не все родители, в Москве обучение в них стоит от 600 долларов в месяц. Однако если семья решилась на это, то  ее можно поздравить — просторы выбора тут огромны, и так как это бизнес, каждая школа будет только рада помочь родителю и ответить на все-все вопросы. Важно только одно. При выборе частной школы поинтересуйтесь, есть ли у нее государственная аккредитация. Если она есть, значит, учебные программы соответствуют госстандартам, а помещения – всем необходимым нормам. Если аккредитации нет, тогда экзамены придется сдавать в обычной государственной школе, с которой у частной есть договор, а это неудобно для детей. Кроме того, аккредитация является одним из показателей уровня школы, она выдается только через несколько лет работы и после проверки специальной комиссией». </p>
 									</div>
-									<p>«Платные частные школы могут позволить себе далеко не все родители, в Москве обучение в них стоит от 600 долларов в месяц. Однако если семья решилась на это, то  ее можно поздравить — просторы выбора тут огромны, и так как это бизнес, каждая школа будет только рада помочь родителю и ответить на все-все вопросы. Важно только одно. При выборе частной школы поинтересуйтесь, есть ли у нее государственная аккредитация. Если она есть, значит, учебные программы соответствуют госстандартам, а помещения – всем необходимым нормам. Если аккредитации нет, тогда экзамены придется сдавать в обычной государственной школе, с которой у частной есть договор, а это неудобно для детей. Кроме того, аккредитация является одним из показателей уровня школы, она выдается только через несколько лет работы и после проверки специальной комиссией». </p>
 								</div>
 							</li>
 						</ol>
@@ -111,12 +124,6 @@
 				<!-- END news-sm -->
 			</div>
 			<!-- BEGIN l-col2  -->
-			<ul class="soc-v">
-				<li><a href="#" class="fa fa-facebook"></a></li>
-				<li><a href="#" class="fa fa-twitter"></a></li>
-				<li><a href="#" class="icon-vk"></a></li>
-				<li><a href="#" class="fa fa-envelope"></a></li>
-			</ul>
 		</div>
 		<div class="l-news l-news_border">
 			<div class="l-col1">
