--- a/src/dislife-text.html
+++ b/src/dislife-text.html
@@ -16,7 +16,8 @@
 					<!-- BEGIN news-line  -->
 					<div class="news-line">
 						<a href="#" class="btn btn_violet btn_bd">Образование</a>
-						<div class="news-line__info">29 ОКТЯБРЯ, 20:27 <span>Диана Ивановна</span></div>
+						<time class="news-line__time">29 ОКТЯБРЯ, 20:27</time>
+						<span>Диана Ивановна</span>
 					</div>
 					<!-- END news-line -->
 					<!-- BEGIN news-header  -->
@@ -25,6 +26,12 @@
 						<div class="text-big text-big_md">Как богатеют директоры московских школ и на что при этом живут обычные учителя?</div>
 					</div>
 					<!-- END news-header -->
+					<ul class="soc-v">
+						<li><a href="#" class="fa fa-facebook"></a></li>
+						<li><a href="#" class="fa fa-twitter"></a></li>
+						<li><a href="#" class="icon-vk"></a></li>
+						<li><a href="#" class="fa fa-envelope"></a></li>
+					</ul>
 					<div class="divider"></div>
 					<!-- BEGIN article  -->
 					<article class="article article_serif">
@@ -42,8 +49,15 @@
 						<p>Судя по декларациям директоров столичных школ за 2015 год, опубликованным на сайтах окружных управлений образования, их средний доход за год составляет почти 2,4 млн руб., то есть в месяц они зарабатывают примерно по 200 тыс. руб. Почему это происходит и хорошо ли это, если разобраться?</p>
 						<h2>Откуда доход</h2>
 						<p>Самый большой доход — 18,9 млн руб. (см. таблицу) — в прошлом году получила директор школы №1240 Пресненского района Москвы Татьяна Щипкова. Большая его часть, как поясняет сама Щипкова, — средства от продажи квартиры; профессиональная деятельность принесла ей 2,45 млн руб. Зарплата директора, уточняет она, определяется в департаменте образования города и рассчитывается путем умножения средней зарплаты на повышающий коэффициент, зависящий от наличия у школы рейтинга. «У кого-то коэффициент 2, у кого-то 3 или даже 4. Мы, например, вошли в топ-400, и с октября 2013 года у нас повышающий коэффициент 2,5», — поясняет директор школы №1373 на ул. Чечулина Наталия Углава, задекларировавшая в 2015 году 7,8 млн руб., 5,2 млн из которых — также средства от продажи квартиры.</p>
-						<p>
-							Рейтинг образовательных учреждений, на который ссылаются директора школ, рассчитывается департаментом образования Москвы на основе результатов участияшкольников в олимпиадах, сдачи ЕГЭ и ГИА, добровольных диагностик в четвертых и седьмых классах, а также наличия дошкольного отделения. Как следует из общего списка доходов директоров, наличие у школы рейтинга — не самый главный фактор при определении зарплаты ее руководителя. Директор первого в рейтинге московских школ лицея №1535 Татьяна Воробьева, например, получила в прошлом году всего 2,2 млн руб. (604-е место), а в двадцатке лидеров — семь директоров, школы под руководством которых рейтинга вообще не имеют. По словам Углавы, суммы зарплат зависят также от выслуги лет и квалификации.
+						<a href="#" class="cut">
+							<i class="cut-ico"></i>
+							<i class="fa fa-scissors"></i>
+							<div class="news-header">
+								<p class="news-header__subtitle">Инструкция:</p>
+								<h3 class="h3">Как выбрать школу для своего ребенка?</h3>
+							</div>
+						</a>
+						<p>Рейтинг образовательных учреждений, на который ссылаются директора школ, рассчитывается департаментом образования Москвы на основе результатов участияшкольников в олимпиадах, сдачи ЕГЭ и ГИА, добровольных диагностик в четвертых и седьмых классах, а также наличия дошкольного отделения. Как следует из общего списка доходов директоров, наличие у школы рейтинга — не самый главный фактор при определении зарплаты ее руководителя. Директор первого в рейтинге московских школ лицея №1535 Татьяна Воробьева, например, получила в прошлом году всего 2,2 млн руб. (604-е место), а в двадцатке лидеров — семь директоров, школы под руководством которых рейтинга вообще не имеют. По словам Углавы, суммы зарплат зависят также от выслуги лет и квалификации.
 						</p>
 						<p>Кроме того, директора могут совмещать руководство школой с другими занятиями. Директор гимназии №1518 на проспекте Мира Марина Фирсова (8,9 млн руб. за год), например, дополнительно заработала на публикациях пособий и лекциях в Московском городском педагогическом университете.</p>
 						<h2>У учителей меньше</h2>
@@ -73,7 +87,10 @@
 						<p>«У нас есть по каждому региону и в целом по Российской Федерации линейка повышения заработных плат до 2018 года на всех уровнях системы образования. Эти показатели опубликованы, они доступны, и любой человек может с этими планами ознакомиться. Нет никаких сомнений, что они будут реализованы даже в этих непростых экономических условиях», — сказал министр образования Дмитрий Ливанов в недавнем интервью каналу «Россия-24».</p>
 						<p>По словам Ливанова, за последние два года зарплата педагогов всех уровней образования (дошкольного, школьного и высшего) выросла на 60%. «Это очень серьезный рост. По итогам этого года средняя зарплата учителей по всей стране будет около 32 тысяч рублей… В целом на сегодня этот уровень вполне конкурентоспособен, и мы считаем, что он действительно привлекает в школы молодых, амбициозных выпускников педагогических вузов», — комментирует глава Минобрнауки.</p>
 						<figure>
-							<img src="img/text-img-2.jpg" alt="img">
+							<div class="expand">
+								<a href="#" class="expand__link js-expand"><i class="fa fa-expand"></i></a>
+								<img class="expand__img" src="img/text-img-2.jpg" alt="img">
+							</div>
 							<figcaption>
 								<i class="square is-green"></i>
 								<p>Коллекция табакерок, ранее принадлежавшая Ротшильдам и конфискованная Германом Герингом. В замке Нойшванштайн.<span class="meta">Gamma-Rapho via Getty Images / Keystone France</span></p>
@@ -121,12 +138,6 @@
 				<!-- END news-sm -->
 			</div>
 			<!-- BEGIN l-col2  -->
-			<ul class="soc-v">
-				<li><a href="#" class="fa fa-facebook"></a></li>
-				<li><a href="#" class="fa fa-twitter"></a></li>
-				<li><a href="#" class="icon-vk"></a></li>
-				<li><a href="#" class="fa fa-envelope"></a></li>
-			</ul>
 		</div>
 		<div class="divider"></div>
 		<div class="l-news">
