--- a/src/dislife-list.html
+++ b/src/dislife-list.html
@@ -80,7 +80,7 @@
 						</div>
 					</div>
 					<div class="inner-slider">
-						<div class="inner-slider__bl js-slider">
+						<div class="inner-slider__bl js-slider-images">
 							<img class="disqus" src="img/list-slide.jpg" alt="">
 							<img class="disqus" src="img/list-slide.jpg" alt="">
 							<img class="disqus" src="img/list-slide.jpg" alt="">
