--- a/src/dislife-main.html
+++ b/src/dislife-main.html
@@ -109,8 +109,8 @@
 			<div class="col-sm">
 				<div class="news-main">
 					<div class="news-main__title"><i class="fa fa-rss"></i>ПОСЛЕДНИЕ НОВОСТИ</div>
-					<div class="news-main__scroll">
-						<ul class="news-main__list scroll js-scroll">
+					<div class="news-main__wrap">
+						<ul class="news-main__list">
 							<li class="news-item">
 								<a href="#" class="news-item__link">
 									<div class="news-item__title">Правительство не вернет сигарет</div>
@@ -161,24 +161,6 @@
 									<div class="news-item__title">Правительство не вернет сигарет</div>
 									<div class="news-item__info">
 										<p>Решилась судьба читающих курильщиков. Правительство России отвергло предложение депутатов вернуть сигареты в ларьки «Печать»</p>
-										<time class="meta">29 ОКТЯБРЯ, 20:27</time>
-									</div>
-								</a>
-							</li>
-							<li class="news-item">
-								<a href="#" class="news-item__link">
-									<div class="news-item__title">Правительство не вернет сигарет</div>
-									<div class="news-item__info">
-										<p>Заработали новые временные нормы по приему пациентов в государственных поликлиниках. Минздрав РФ подчеркивает, что только рекомендует врачам ориентироваться на указанное время. Выгонять пациентов ведомство не просит</p>
-										<time class="meta">29 ОКТЯБРЯ, 20:27</time>
-									</div>
-								</a>
-							</li>
-							<li class="news-item">
-								<a href="#" class="news-item__link">
-									<div class="news-item__title">Правительство не вернет сигарет</div>
-									<div class="news-item__info">
-										<p>Заработали новые временные нормы по приему пациентов в государственных поликлиниках. Минздрав РФ подчеркивает, что только рекомендует врачам ориентироваться на указанное время. Выгонять пациентов ведомство не просит</p>
 										<time class="meta">29 ОКТЯБРЯ, 20:27</time>
 									</div>
 								</a>
@@ -306,12 +288,12 @@
 			<div class="load-more__section">
 				<div class="item-banner item-banner_blue">
 					<a href="#" class="item-banner__bg" style="background-image: url(img/patronus-big.jpg);"></a>
-					<a href="#" class="btn btn_orange">Спецпроекты</a> 
+					<a href="#" class="btn btn_orange">Спецпроекты</a>
 					<div class="item-banner__left">
 						<div class="item-banner__left-in">
 							<div class="item-banner__title">ПАТРОНУС</div>
 							<div class="item-banner__subtitle">Детский правозащитный проект</div>
-							<p>Мы добиваемся жилья для сирот, лечения для больных, справедливости для обиженных. Мы добиваемся соблюдения  хороших законов и изменения плохих</p>
+							<p>Мы добиваемся жилья для сирот, лечения для больных, справедливости для обиженных. Мы добиваемся соблюдения хороших законов и изменения плохих</p>
 							<a href="#" class="item-banner__btn">Написать обращение</a>
 						</div>
 					</div>
@@ -321,7 +303,7 @@
 					<div class="col-sm">
 						<!-- begin item  -->
 						<div class="item item_orange">
-							<a href="#" class="btn btn_orange">Спецпроекты</a> 
+							<a href="#" class="btn btn_orange">Спецпроекты</a>
 							<a href="#" class="item__in">
 								<div class="item__img" style="background-image: url(img/item.jpg)"></div>
 								<div class="item__txt">
@@ -337,7 +319,7 @@
 					</div>
 					<div class="col-sm">
 						<!-- begin item  -->
-						<div class="item item_orange">
+						<div class="item item_orange mobile-hidden">
 							<a href="#" class="btn btn_orange">Спецпроекты</a>
 							<a href="#" class="item__in">
 								<div class="item__img" style="background-image: url(img/item2.jpg)"></div>
@@ -354,7 +336,7 @@
 					</div>
 					<div class="col-sm">
 						<!-- begin item  -->
-						<div class="item item_orange item_mod">
+						<div class="item item_orange item_mod mobile-hidden">
 							<a href="#" class="btn btn_orange">Спецпроекты</a>
 							<a href="#" class="item__img" style="background-image: url(img/item3.jpg)">
 								<div class="item__title">
@@ -378,7 +360,7 @@
 			<div class="load-more__section">
 				<div class="item-image">
 					<a href="#" class="item-image__bg" style="background-image: url(img/nogi.jpg);"></a>
-					<a href="#" class="btn btn_orange">Спецпроекты</a> 
+					<a href="#" class="btn btn_orange">Спецпроекты</a>
 					<form class="box-form">
 						<div class="box-form__title">Пазлы</div>
 						<div class="box-form__subtitle">Знакомства для людей с ограниченными возможностями</div>
@@ -445,7 +427,7 @@
 					<div class="col-sm">
 						<!-- begin item  -->
 						<div class="item item_orange">
-							<a href="#" class="btn btn_orange">Спецпроекты</a> 
+							<a href="#" class="btn btn_orange">Спецпроекты</a>
 							<a href="#" class="item__in">
 								<div class="item__img" style="background-image: url(img/item.jpg)"></div>
 								<div class="item__txt">
@@ -502,7 +484,7 @@
 			<div class="load-more__section">
 				<div class="item-banner item-banner_yellow">
 					<a href="#" class="item-banner__bg" style="background-image: url(img/bitmap2.jpg);"></a>
-					<a href="#" class="btn btn_orange">Спецпроекты</a> 
+					<a href="#" class="btn btn_orange">Спецпроекты</a>
 					<div class="item-banner__left">
 						<div class="item-banner__left-in">
 							<div class="item-banner__title_mod">Бюро справедливости</div>
@@ -516,7 +498,7 @@
 					<div class="col-sm">
 						<!-- begin item  -->
 						<div class="item item_orange">
-							<a href="#" class="btn btn_orange">Спецпроекты</a> 
+							<a href="#" class="btn btn_orange">Спецпроекты</a>
 							<a href="#" class="item__in">
 								<div class="item__img" style="background-image: url(img/item.jpg)"></div>
 								<div class="item__txt">
@@ -572,7 +554,7 @@
 			</div>
 		</div>
 	</div>
-	//=include partials/footer.html 
+	//=include partials/footer.html
 </div>
 <!-- END out-->
 </body>
