--- a/src/dislife-main-education.html
+++ b/src/dislife-main-education.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	//=include partials/head.html
-	<title>Main</title>
+	<title>Main Education</title>
 </head>
 <body>
 <!-- BEGIN  out-->
@@ -15,17 +15,21 @@
 		</div>
 		<div class="main-head__img" style="background-image: url(img/main-head-education.jpg);"></div>
 	</div>
-	<div class="fullscreen fullscreen_violet" style="background-image: url(img/fullheight-pic2.jpg);">
-		<div class="fullscreen__inner">
-			<div class="fullscreen__center">
-				<div class="fullscreen__info">
-					<div class="fullscreen__author">Ира Соломонова</div>
-					<div class="fullscreen__title">Школьная несправедливость</div>
-					<h4>Как богатеют директоры московских школ и на что при этом живут обычные учителя?</h4>
+	<a href="#" class="fullscreen-wrap">
+		<div class="fullscreen fullscreen_violet" style="background-image: url(img/fullheight-pic2.jpg);">
+			<div class="fullscreen__inner">
+				<div class="fullscreen__center">
+					<div class="fullscreen__info">
+						<div class="fullscreen__author">Ира Соломонова</div>
+						<div class="fullscreen__title">Школьная несправедливость</div>
+						<div class="fullscreen__hidden">
+							<h4>Как богатеют директоры московских школ и на что при этом живут обычные учителя?</h4>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
+	</a>
 	<div class="container main-in">
 		<div class="row">
 			<div class="col-lg">
