--- a/src/dislife-main-medicine.html
+++ b/src/dislife-main-medicine.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	//=include partials/head.html
-	<title>Main</title>
+	<title>Main Medicine</title>
 </head>
 <body>
 <!-- BEGIN  out-->
@@ -17,12 +17,17 @@
 	</div>
 	<div class="fullscreen fullscreen_red" style="background-image: url(img/fullheight-pic3.jpg);">
 		<div class="fullscreen__inner">
-			<div class="fullscreen__center">
-				<div class="fullscreen__info">
-					<div class="fullscreen__author">Ира Соломонова</div>
-					<div class="fullscreen__title">Дети Гольяново</div>
+			<a href="#" class="fullscreen__link">
+				<div class="fullscreen__center">
+					<div class="fullscreen__info">
+						<div class="fullscreen__author">Ира Соломонова</div>
+						<div class="fullscreen__title">Дети Гольяново</div>
+					</div>
+					<div class="fullscreen__hidden">
+						<h4>Как богатеют директоры московских школ и на что при этом живут обычные учителя?</h4>
+					</div>
 				</div>
-			</div>
+			</a>
 			<a href="#" class="info-block info-block_red">
 				<span class="info-block__arr"></span>
 				<div class="info-block__author">Инструкция</div>
@@ -45,7 +50,9 @@
 					<div class="item-full__title">
 						<p class="item-full__author">Ира Соломонова</p>
 						<p class="item-full__subtitle">Школьная несправедливость</p>
-						<p class="item-full__info">Почему воспитанникам детских домов не могут помочь ни взрослые, ни закон, и за что здоровых детей отправляют в психиатрические больницы</p>
+						<div class="item-full__hidden">
+							<p class="item-full__info">Почему воспитанникам детских домов не могут помочь ни взрослые, ни закон, и за что здоровых детей отправляют в психиатрические больницы</p>
+						</div>
 					</div>
 				</a>
 			</div>
