--- a/src/dislife-main-polytique.html
+++ b/src/dislife-main-polytique.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	//=include partials/head.html
-	<title>Main</title>
+	<title>Main Polytique</title>
 </head>
 <body>
 <!-- BEGIN  out-->
