--- a/src/dislife-instruction-simple.html
+++ b/src/dislife-instruction-simple.html
@@ -26,12 +26,14 @@
 						<h1 class="h1">Что делать, когда получил повестку?</h1>
 					</div>
 					<!-- END news-header -->
-					<ul class="soc-v">
-						<li><a href="#" class="fa fa-facebook"></a></li>
-						<li><a href="#" class="fa fa-twitter"></a></li>
-						<li><a href="#" class="icon-vk"></a></li>
-						<li><a href="#" class="fa fa-envelope"></a></li>
-					</ul>
+					<div class="soc-v">
+						<ul class="js-sticky">
+							<li><a href="#" class="fa fa-facebook"></a></li>
+							<li><a href="#" class="fa fa-twitter"></a></li>
+							<li><a href="#" class="icon-vk"></a></li>
+							<li><a href="#" class="fa fa-envelope"></a></li>
+						</ul>
+					</div>	
 					<div class="divider"></div>
 					<!-- BEGIN article  -->
 					<article class="article">
@@ -116,6 +118,7 @@
 			</div>
 			<!-- BEGIN l-col2  -->
 		</div>
+		<div class="js-sticky-end"></div>
 		<div class="l-news l-news_border">
 			<div class="l-col1">
 				<!-- BEGIN subscribe  -->
