--- a/src/dislife-instruction.html
+++ b/src/dislife-instruction.html
@@ -25,13 +25,15 @@
 						<p class="news-header__subtitle">Инструкция:</p>
 						<h1 class="h1">Как выбрать школу для своего ребенка?</h1>
 					</div>
-					<!-- END news-header -->
-					<ul class="soc-v">
-						<li><a href="#" class="fa fa-facebook"></a></li>
-						<li><a href="#" class="fa fa-twitter"></a></li>
-						<li><a href="#" class="icon-vk"></a></li>
-						<li><a href="#" class="fa fa-envelope"></a></li>
-					</ul>
+					<!-- END news-header -->					
+					<div class="soc-v">
+						<ul class="js-sticky">
+							<li><a href="#" class="fa fa-facebook"></a></li>
+							<li><a href="#" class="fa fa-twitter"></a></li>
+							<li><a href="#" class="icon-vk"></a></li>
+							<li><a href="#" class="fa fa-envelope"></a></li>
+						</ul>
+					</div>	
 					<div class="divider"></div>
 					<!-- BEGIN article  -->
 					<article class="article">
@@ -125,6 +127,7 @@
 			</div>
 			<!-- BEGIN l-col2  -->
 		</div>
+		<div class="js-sticky-end"></div>
 		<div class="l-news l-news_border">
 			<div class="l-col1">
 				<!-- BEGIN subscribe  -->
