+all-news/about/header menu

--- a/src/dislife-main.html
+++ b/src/dislife-main.html
@@ -52,6 +52,33 @@
 				</div>
 			</div>
 		</div>
+		<div class="special-projects">
+			<ul class="special-projects__list">
+				<li class="special-projects__heading">
+					<a href="#" class="special-projects__link">
+						Спецпроекты
+					</a>
+				</li>
+				<li class="special-projects__item">
+					<a href="#" class="special-projects__link">
+						<div class="special-projects__title">Патронус</div>
+						<div class="special-projects__text">Детский правозащитный проект</div>
+					</a>
+				</li>
+				<li class="special-projects__item">
+					<a href="#" class="special-projects__link">
+						<div class="special-projects__title">Пазлы</div>
+						<div class="special-projects__text">Знакомства для инвалидов</div>
+					</a>
+				</li>
+				<li class="special-projects__item">
+					<a href="#" class="special-projects__link">
+						<div class="special-projects__title">Бюро справедливости</div>
+						<div class="special-projects__text">Обратиться к депутату</div>
+					</a>
+				</li>
+			</ul>
+		</div>
 		<div class="row">
 			<div class="col-sm">
 				<div class="item item_gold item_mod">
