--- a/src/dislife-list.html
+++ b/src/dislife-list.html
@@ -383,7 +383,7 @@
 					<li><a href="#" class="fa fa-facebook"></a></li>
 					<li><a href="#" class="fa fa-twitter"></a></li>
 					<li><a href="#" class="icon-vk"></a></li>
-					<li><a href="#" class="fa fa-envelope"></a></li>
+					<li><a href="#" class="fa fa-odnoklassniki"></a></li>
 				</ul>
 			</div>	
 		</div>
