--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,8 @@
 		<a href="dislife-instruction-simple.html" target="_blank">dislife-instruction-simple.html</a>
 		<a href="dislife-instruction.html" target="_blank">dislife-instruction.html</a>
 		<a href="dislife-list.html" target="_blank">dislife-list.html</a>
+		<a href="dislife-text-about.html" target="_blank">dislife-text-about.html</a>
+		<a href="dislife-allnews-1300.html" target="_blank">dislife-allnews-1300.html</a>
 	</div>
 </div>
 <!-- END out-->
