--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
 		<a href="dislife-text-about.html" target="_blank">dislife-text-about.html</a>
 		<a href="dislife-allnews-1300.html" target="_blank">dislife-allnews-1300.html</a>
 		<a href="dislife-text-special-bureau.html" target="_blank">dislife-text-special-bureau.html</a>
+		<a href="dislife-text-special-patronus.html" target="_blank">dislife-text-special-patronus.html</a>
 	</div>
 </div>
 <!-- END out-->
